opac lists style - fix action menu spacing

--- a/catalog-scss/_lists.scss
+++ b/catalog-scss/_lists.scss
@@ -9,6 +9,15 @@
         top: 1.5em;
     }
 
+    a.send {
+        background: 0;
+        padding: 0;
+    }
+
+    .sep {
+        display: none;
+    }
+
     #sorting-form {
         margin-top: 1em;
     }
